--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -41,4 +41,22 @@
         android:text="Size:" />
 
 
+    <Button
+        android:id="@+id/button_base64_batch"
+        android:text="Batch Base 64"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp" />
+
+    <Button
+        android:id="@+id/button_pb_batch"
+        android:text="Batch Protocol Buffers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp" />
+
 </RelativeLayout>
